fix: text overflow of search form via ellipsis (#3124)

--- a/src/amo/components/SearchForm/styles.scss
+++ b/src/amo/components/SearchForm/styles.scss
@@ -24,6 +24,7 @@
   outline: 0;
   padding-bottom: 6px;
   padding-top: 6px;
+  text-overflow: ellipsis;
   white-space: nowrap;
   width: 100%;
 
